✨ Add remove mechanism
